--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Email      : contatocleitoncorrea@hotmail.com
 <head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta name="author" content="DSAThemes"/>	
+		<meta name="author" content="Cleiton Correa"/>	
 		<meta name="description" content="Documento de realizado para a empresa NeoAssist"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 				
